2005-12-30  Hans Breuer  <hans@breuer.org>

	* app/app_procs.c : add command line parameter --nonew to allow
	avoiding the empty start-up diagram
	Also give a hint on where the object-libs were missing.
	Finally work around a misbehaviour upstreamm :
	g_option_context_parse() returning FALSE but not setting error.

	* app/commands.c app/app_diagram_tree.c app/interface.c :
	Use gdk_pixbuf_render_pixmap_and_mask_for_colormap as suggested by
	http://www.gtk.org/api/2.6/gdk/gdk-Pixbufs.html#gdk-pixbuf-render-pixmap-and-mask
	
	* lib/widgets.c : image file selection finally ported to the new
	gtk file chooser. Fixes bug #309383

2005-12-28  Hans Breuer  <hans@breuer.org>

	* app/commands.c(file_new_callback) : convert to filename encoding before
	passing to new_diagram(), fixes bug #322400
	
	* app/interface.c(create_display_shell) : don't clip width on screen 
	height - now commited. Also lazy creation of tooltips.
	
	* objects/UML/actor.c : Actor is finally resizable, fixes bug #66915
	
2005-12-27  Hans Breuer  <hans@breuer.org>

	* app/diapsft2renderer.c(draw_bezier_outline) : only call
	FT_Outline_Decompose() when FT_GLYPH_FORMAT_OUTLINE.
	Prefers no text output over crashing for bug #144212

	* app/interface.c : removed superfluous call to dia_canvas_set_size().
	Suggested by Roland Stigge, fixes bug #148149.

	* plug-ins/dxf/dxf-import.c : don't complain too loud on Binary
	DXF. It is not supported at all. Fixes bug #322101

	* lib/geometry.c : removed the ifdefed GLIB_CHECK_VERSION(2,7,0)
	define G_IMPLEMENT_INLINES. It breaks again with glib-2-8


2005-12-27  Hans Breuer  <hans@breuer.org>

	* app/navigation.c : protect on_da_button_release_event() against being
	called twice. Also only popdown the navigation window after the first 
	draw (reusing nav->is_first_expose). Fixes bug #151696
	
	* app/interface.c(create_display_shell): don't clip width on screen height, 
	but height

	* lib/plug-ins.c : fixed typo in comment
	
	* lib/libdia.def : updated externals